# vscode-civ5-mod-builder

./: .editorconfig  .eslintrc.json  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
civ5_mod_builder/: __init__.py  builder.py  cli.py  compiler.py
data/: input_example.txt  input_example.xml  output_example.txt  output_example.xml  test.py
src/: extension.ts
src/builder/: fs.ts  index.ts
src/cli/: index.ts
src/compiler/: convertor.ts  index.ts  types.ts
src/test/: runTest.ts
src/test/suite/: convertor.test.ts  extension.test.ts  testObj.ts  xml_parser.test.ts
